@startuml

title __MODEL's Class Diagram__\n

  namespace model {
    class model.Group {
        - groupName : String
        + Group()
        + getGroupName()
        + setGroupName()
    }
  }
  

  namespace model {
    class model.Message {
        - date : Date
        - message : String
        + Message()
        + getDate()
        + getMessage()
        + getMessageType()
        + toString()
    }
  }
  

  namespace model {
    class model.Recipient {
        - privateKey : String
        - username : String
        + Recipient()
        + equals()
        + getPrivateKey()
        + getUsername()
        + hashCode()
        + setPrivateKey()
    }
  }
  

  namespace model {
    class model.User {
        - inGroup : boolean
        - loggedIn : boolean
        - recipients : ArrayList<Recipient>
        - sentMessages : LinkedList<Message>
        - username : String
        + User()
        + addRecipient()
        + getGroup()
        + getRecipient()
        + getRecipients()
        + getUsername()
        + hasRecipient()
        + isInGroup()
        + isLoggedIn()
        + logSentMessage()
        + printSentMessages()
        + setGroup()
        + setInGroup()
        + setLoggedIn()
        + setUsername()
    }
  }
  

  model.Message o-- util.MessageType : messageType
  model.User o-- model.Group : group


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
